// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clicking on other tabs renders correct content and style 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  padding: 8px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1 {
  display: flex;
}

.c2 {
  overflow-x: auto;
  white-space: nowrap;
}

.c5 {
  color: inherit;
  border: none;
  background: rgba(255,255,255,0.07);
}

.c5:hover,
.c5:focus {
  cursor: pointer;
  opacity: 1;
}

.c4 {
  color: inherit;
  border: none;
  background: transparent;
}

.c4:hover,
.c4:focus {
  cursor: pointer;
  opacity: 1;
}

.c7 {
  background: rgba(255,255,255,0.07);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c0 c1 c2"
    >
      <button
        class="c3 c4"
      >
        tab one
      </button>
      <button
        class="c3 c5"
      >
        tab two
      </button>
    </div>
    <div
      class="c6 c7"
    >
      <div>
        content 2
      </div>
    </div>
  </div>
</div>
`;

exports[`init tab highlight and content 1`] = `
.c0 {
  box-sizing: border-box;
}

.c3 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 24px;
  padding-right: 24px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c6 {
  box-sizing: border-box;
  padding: 8px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1 {
  display: flex;
}

.c2 {
  overflow-x: auto;
  white-space: nowrap;
}

.c4 {
  color: inherit;
  border: none;
  background: rgba(255,255,255,0.07);
}

.c4:hover,
.c4:focus {
  cursor: pointer;
  opacity: 1;
}

.c5 {
  color: inherit;
  border: none;
  background: transparent;
}

.c5:hover,
.c5:focus {
  cursor: pointer;
  opacity: 1;
}

.c7 {
  background: rgba(255,255,255,0.07);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c0 c1 c2"
    >
      <button
        class="c3 c4"
      >
        tab one
      </button>
      <button
        class="c3 c5"
      >
        tab two
      </button>
    </div>
    <div
      class="c6 c7"
    >
      <div>
        content 1
      </div>
    </div>
  </div>
</div>
`;
